<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="140dp"
            android:layout_marginRight="140dp"
            android:text="@string/textview_led4_toggle"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/toggleButton_LED4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toggleButton_LED4" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="140dp"
            android:layout_marginRight="140dp"
            android:text="@string/textview_led3_toggle"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/toggleButton_LED3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toggleButton_LED3" />

        <Button
            android:id="@+id/button_update_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/buttonUpdatePort"
            app:layout_constraintBottom_toTopOf="@+id/button_update_ip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ToggleButton
            android:id="@+id/toggleButton_connect_server"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ConnectServerToggleButton"
            android:textOff="@string/toggle_button_disconnected"
            android:textOn="@string/toggle_button_connected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_update_ip" />

        <EditText
            android:id="@+id/editText_portNumber"
            android:layout_width="203dp"
            android:layout_height="58dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/text_view_server_port"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_update_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toEndOf="@+id/button_update_port" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="185dp"
            android:layout_height="40dp"
            android:text="@string/connect_server_textview"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/toggleButton_connect_server"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toggleButton_connect_server" />

        <ToggleButton
            android:id="@+id/toggleButton_LED1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton_connect_server" />

        <ToggleButton
            android:id="@+id/toggleButton_LED2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="ToggleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton_LED1" />

        <ToggleButton
            android:id="@+id/toggleButton_LED3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="ToggleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton_LED2" />

        <ToggleButton
            android:id="@+id/toggleButton_LED4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="ToggleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton_LED3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="140dp"
            android:layout_marginRight="140dp"
            android:text="@string/textview_led2_toggle"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/toggleButton_LED2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toggleButton_LED2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="140dp"
            android:layout_marginRight="140dp"
            android:text="@string/textview_led1_toggle"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/toggleButton_LED1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/toggleButton_LED1" />

        <EditText
            android:id="@+id/editTextTextMultiLine_serverMessageWindow"
            android:layout_width="367dp"
            android:layout_height="223dp"
            android:layout_marginTop="24dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:enabled="false"
            android:gravity="start|top"
            android:hint="Server Messages"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:selectAllOnFocus="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_get_PB1"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.673"
            app:layout_constraintStart_toEndOf="@+id/textView7" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_get_PB2"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.673"
            app:layout_constraintStart_toEndOf="@+id/textView6" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_get_PB3"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.724"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

        <Button
            android:id="@+id/button_update_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/button_update_serverip"
            app:layout_constraintBottom_toTopOf="@+id/toggleButton_connect_server"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_update_port" />

        <EditText
            android:id="@+id/editText_ip"
            android:layout_width="210dp"
            android:layout_height="53dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/editText_update_server_IP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button_update_ip"
            app:layout_constraintTop_toBottomOf="@+id/editText_portNumber" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>